--- a/OWolverine/Views/Shared/_Layout.cshtml
+++ b/OWolverine/Views/Shared/_Layout.cshtml
@@ -26,13 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">OWolverine</a>
+                <a asp-area="" asp-controller="StellarView" asp-action="Index" class="navbar-brand">OWolverine</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="StellarView" asp-action="Index">Stellar View</a></li>
+                    <li><a asp-area="" asp-controller="StellarView" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="StellarView" asp-action="Contact">Contact</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
@@ -42,7 +42,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - OWolverine</p>
+            <p>UTOSOFT &copy; 2017 - OWolverine</p>
         </footer>
     </div>
 
