--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -7,7 +7,27 @@
     <div class="col-md-12">
         <label for="server-name">伺服器：</label>
         <select id="server-name">
-            <option value="s119-tw.ogame.gameforge.com">Sirius</option>
+            <option value="s101-tw.ogame.gameforge.com">
+                Andromeda
+            </option>
+            <option value="s115-tw.ogame.gameforge.com">
+                Orion
+            </option>
+            <option value="s116-tw.ogame.gameforge.com">
+                Pegasus
+            </option>
+            <option value="s117-tw.ogame.gameforge.com">
+                Quantum
+            </option>
+            <option value="s118-tw.ogame.gameforge.com">
+                Rigel
+            </option>
+            <option value="s119-tw.ogame.gameforge.com" selected>
+                Sirius
+            </option>
+            <option value="s120-tw.ogame.gameforge.com">
+                Taurus
+            </option>
         </select> 
         <label for="user-name">玩家名稱：</label>
         <input type="text" id="user-name" value="" />
