add new servers

--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -28,6 +28,12 @@
             <option value="s120-tw.ogame.gameforge.com">
                 Taurus
             </option>
+            <option value="s121-tw.ogame.gameforge.com">
+                Ursa
+            </option>
+            <option value="s122-tw.ogame.gameforge.com">
+                Vega
+            </option>
         </select> 
         <label for="user-name">玩家名稱：</label>
         <input type="text" id="user-name" value="" />
