--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -5,39 +5,45 @@
 <h1>星圖</h1>
 <div class="row">
     <div class="col-md-12">
-        <label for="server-name">伺服器：</label>
-        <select id="server-name">
-            <option value="s101-tw.ogame.gameforge.com">
-                Andromeda
-            </option>
-            <option value="s115-tw.ogame.gameforge.com">
-                Orion
-            </option>
-            <option value="s116-tw.ogame.gameforge.com">
-                Pegasus
-            </option>
-            <option value="s117-tw.ogame.gameforge.com">
-                Quantum
-            </option>
-            <option value="s118-tw.ogame.gameforge.com">
-                Rigel
-            </option>
-            <option value="s119-tw.ogame.gameforge.com" selected>
-                Sirius
-            </option>
-            <option value="s120-tw.ogame.gameforge.com">
-                Taurus
-            </option>
-            <option value="s121-tw.ogame.gameforge.com">
-                Ursa
-            </option>
-            <option value="s122-tw.ogame.gameforge.com">
-                Vega
-            </option>
-        </select> 
-        <label for="user-name">玩家名稱：</label>
-        <input type="text" id="user-name" value="" />
-        <button type="button" id="player-request">諮詢</button>
+        <form class="form-inline" id="player-request-form">
+            <div class="form-group">
+                <label for="server-name">伺服器：</label>
+                <select id="server-name" class="form-control">
+                    <option value="s101-tw.ogame.gameforge.com">
+                        Andromeda
+                    </option>
+                    <option value="s115-tw.ogame.gameforge.com">
+                        Orion
+                    </option>
+                    <option value="s116-tw.ogame.gameforge.com">
+                        Pegasus
+                    </option>
+                    <option value="s117-tw.ogame.gameforge.com">
+                        Quantum
+                    </option>
+                    <option value="s118-tw.ogame.gameforge.com">
+                        Rigel
+                    </option>
+                    <option value="s119-tw.ogame.gameforge.com" selected>
+                        Sirius
+                    </option>
+                    <option value="s120-tw.ogame.gameforge.com">
+                        Taurus
+                    </option>
+                    <option value="s121-tw.ogame.gameforge.com">
+                        Ursa
+                    </option>
+                    <option value="s122-tw.ogame.gameforge.com">
+                        Vega
+                    </option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="user-name">玩家名稱：</label>
+                <input type="text" class="form-control" id="user-name" value="" />
+            </div>
+            <button type="submit" class="btn btn-default" id="player-request">諮詢</button>
+        </form>
     </div>
 </div>
 
