load player details

--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -99,7 +99,7 @@
                 @Html.DisplayFor(modelItem => item.LastUpdate)
             </td>
             <td>
-                <a asp-action="Refresh" asp-route-id="@item.Id">Refresh</a>
+                <a asp-action="RefreshUniverse" asp-route-id="@item.Id">Refresh</a>
             </td>
         </tr>
         }
