--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -7,26 +7,58 @@
 <h1>星圖</h1>
 <div class="row">
     <div class="col-md-12">
-        <form class="form-inline" id="player-request-form">
+        <form asp-action="Search" class="form-inline" method="post">
             <div class="form-group">
                 <label asp-for="ServerId">伺服器：</label>
                 <select asp-for="ServerId" asp-items="@(new SelectList(Model.Servers, "Id", "Name"))" class="form-control"></select>
             </div>
             <div class="form-group">
                 <label asp-for="PlayerName">玩家名稱：</label>
-                <input type="text" asp-for="PlayerName" class="form-control" placeholder="@Model.Servers[5].FeelingLucky" />
+                <input type="text" asp-for="PlayerName" class="form-control" placeholder="" value="" />
             </div>
             <button type="submit" class="btn btn-default" id="player-request">諮詢</button>
         </form>
     </div>
 </div>
 
-<div class="row">
-    <div class="col-md-12">
-        <!-- Show Output -->
-        <div id="query-result"></div>
-    </div>
-</div>
+<!-- Server status -->
+@foreach (var player in Model.Players)
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => player.Id)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Servers[0].Universe.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Servers[0].Universe.Speed)
+                </th>
+                <th>
+                    Active / Players
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Servers[0].Universe.LastUpdate)
+                </th>
+                <th>
+
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in player.Planets)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Coord);
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
 
 <!-- Server status -->
 <table class="table">
@@ -55,26 +87,26 @@
     <tbody>
         @foreach (var item in Model.Servers)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Universe.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Universe.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Universe.Speed) / @Html.DisplayFor(modelItem => item.Universe.FleetSpeed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ActivePlayers) / @Html.DisplayFor(modelItem => item.Universe.Players.Count)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Universe.LastUpdate)
-            </td>
-            <td>
-                <a asp-action="RefreshUniverse" asp-route-id="@item.Universe.Id">Refresh</a>
-            </td>
-        </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Universe.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Universe.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Universe.Speed) / @Html.DisplayFor(modelItem => item.Universe.FleetSpeed)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ActivePlayers) / @Html.DisplayFor(modelItem => item.Universe.Players.Count)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Universe.LastUpdate)
+                </td>
+                <td>
+                    <a asp-action="RefreshUniverse" asp-route-id="@item.Universe.Id">Refresh</a>
+                </td>
+            </tr>
         }
     </tbody>
 </table>
