--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -1,26 +1,13 @@
-﻿@namespace OWolverine.Models.StellaViewViewModels
-@model StarMapSearchViewModel
+﻿@namespace OWolverine.Models.StarMapViewModels
+@model StarIndexViewModel
 @{
     ViewData["Title"] = "Stellar View";
 }
 
 <h1>星圖</h1>
-<div class="row">
-    <div class="col-md-12">
-        <form asp-action="Search" class="form-inline" method="post">
-            <div class="form-group">
-                <label asp-for="ServerId">伺服器：</label>
-                <select asp-for="ServerId" asp-items="@(new SelectList(Model.Servers, "Id", "Name"))" class="form-control"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="PlayerName">玩家名稱：</label>
-                <input type="text" asp-for="PlayerName" class="form-control" placeholder="" value="" />
-            </div>
-            <button type="submit" class="btn btn-default" id="player-request">諮詢</button>
-        </form>
-    </div>
-</div>
-
+@{
+    Html.RenderPartial("SearchFormView", Model.SearchViewModel); 
+}
 <!-- Server status -->
 @foreach (var player in Model.Players)
 {
@@ -28,33 +15,30 @@
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => player.Id)
+                    @Html.DisplayNameFor(model => player.Planets[0].Name)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Servers[0].Universe.Name)
+                    @Html.DisplayNameFor(model => player.Planets[0].Coord)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Servers[0].Universe.Speed)
-                </th>
-                <th>
-                    Active / Players
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Servers[0].Universe.LastUpdate)
-                </th>
-                <th>
-
+                    @Html.DisplayNameFor(model => player.Planets[0].Moon)
                 </th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in player.Planets)
+            @foreach (var planet in player.Planets)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Coord);
-                    </td>
-                </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => planet.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => planet.Coord)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => planet.Moon.Name)
+                </td>
+            </tr>
             }
         </tbody>
     </table>
