--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -49,10 +49,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Servers[0].Universe.Id)
+                @Html.DisplayNameFor(model => model.Servers[0].Id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Servers[0].Universe.Name)
+                @Html.DisplayNameFor(model => model.Servers[0].Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Servers[0].Universe.Speed)
@@ -61,10 +61,7 @@
                 Active / Players
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Servers[0].Universe.LastUpdate)
-            </th>
-            <th>
-
+                @Html.DisplayNameFor(model => model.Servers[0].LastUpdate)
             </th>
         </tr>
     </thead>
@@ -73,10 +70,10 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Universe.Id)
+                    @Html.DisplayFor(modelItem => item.Id)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Universe.Name)
+                    @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Universe.Speed) / @Html.DisplayFor(modelItem => item.Universe.FleetSpeed)
@@ -85,10 +82,7 @@
                     @Html.DisplayFor(modelItem => item.ActivePlayers) / @Html.DisplayFor(modelItem => item.Universe.Players.Count)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Universe.LastUpdate)
-                </td>
-                <td>
-                    <a asp-action="RefreshUniverse" asp-route-id="@item.Universe.Id">Refresh</a>
+                    @Html.DisplayFor(modelItem => item.LastUpdate)
                 </td>
             </tr>
         }
