keep selection from last search

--- a/OWolverine/Views/StellarView/SearchFormView.cshtml
+++ b/OWolverine/Views/StellarView/SearchFormView.cshtml
@@ -9,7 +9,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="PlayerName">玩家名稱：</label>
-                <input type="text" asp-for="PlayerName" class="form-control" placeholder="" value="" />
+                <input type="text" asp-for="PlayerName" class="form-control" placeholder="" value="@Model.PlayerName" />
             </div>
             <button type="submit" class="btn btn-default" id="player-request">諮詢</button>
         </form>
