--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -6,42 +6,62 @@
 
 <h1>星圖</h1>
 @{
-    Html.RenderPartial("SearchFormView", Model.SearchViewModel); 
+    Html.RenderPartial("SearchFormView", Model.SearchViewModel);
 }
+<hr />
+<div class="row">
+    <div class="col-xs-12">
+        <span style="color:red">@(Model.Players.Count <= 0 ? "Player not found" : "")</span>
+    </div>
+</div>
 <!-- Server status -->
 @foreach (var player in Model.Players)
 {
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => player.Planets[0].Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => player.Planets[0].Coord)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => player.Planets[0].Moon)
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var planet in player.Planets)
-            {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => planet.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => planet.Coord)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => planet.Moon.Name)
-                </td>
-            </tr>
-            }
-        </tbody>
-    </table>
+    <div class="panel-group">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" href="#collapse-@player.Id">@player.Name @(player.Alliance == null ? "" : " | "+ @player.Alliance.Name + " (" + @player.Alliance.Tag +") ")</a>
+                </h4>
+            </div>
+            <div id="collapse-@player.Id" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>
+                                    @Html.DisplayNameFor(model => player.Planets[0].Name)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => player.Planets[0].Coord)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => player.Planets[0].Moon)
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var planet in player.Planets)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => planet.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => planet.Coord)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => planet.Moon.Name)
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+                <div class="panel-footer">Panel Footer</div>
+            </div>
+        </div>
+    </div>
 }
 
 <!-- Server status -->
@@ -71,26 +91,26 @@
     <tbody>
         @foreach (var item in Model.Servers)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Universe.Speed) / @Html.DisplayFor(modelItem => item.Universe.FleetSpeed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ActivePlayers) / @Html.DisplayFor(modelItem => item.Universe.Players.Count)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MapUpdateDay)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastUpdate)
-            </td>
-        </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Universe.Speed) / @Html.DisplayFor(modelItem => item.Universe.FleetSpeed)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ActivePlayers) / @Html.DisplayFor(modelItem => item.Universe.Players.Count)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MapUpdateDay)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastUpdate)
+                </td>
+            </tr>
         }
     </tbody>
 </table>
