--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -21,10 +21,10 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" href="#collapse-@player.Id">@player.Name @(player.Alliance == null ? "" : " | "+ @player.Alliance.Name + " (" + @player.Alliance.Tag +") ")</a>
+                    <a data-toggle="collapse" href="#collapse-@player.Id">@player.Name</a>
                 </h4>
             </div>
-            <div id="collapse-@player.Id" class="panel-collapse collapse">
+            <div id="collapse-@player.Id" class="panel-collapse @(Model.Players.Count <= 3 ? "" : "collapse")">
                 <div class="panel-body">
                     <table class="table">
                         <thead>
@@ -58,7 +58,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="panel-footer">Panel Footer</div>
+                <div class="panel-footer">@(player.Alliance == null ? "N/A" : @player.Alliance.Name + " - " + @player.Alliance.Tag)</div>
             </div>
         </div>
     </div>
