fix player not found message showing even if not in search

--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-xs-12">
-        <span style="color:red">@(Model.Players.Count <= 0 ? "Player not found" : "")</span>
+        <span style="color:red">@(Model.Players.Count <= 0 && Context.Request.HttpContext.Request.Method == "POST" ? "Player not found" : "")</span>
     </div>
 </div>
 <!-- Server status -->
