english as default language

--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -4,14 +4,14 @@
     ViewData["Title"] = "Stellar View";
 }
 
-<h1>星圖</h1>
+<h1>Stellar View</h1>
 @{
     Html.RenderPartial("SearchFormView", Model.SearchViewModel);
 }
 <hr />
 <div class="row">
     <div class="col-xs-12">
-        <span style="color:red">@(Model.Players.Count <= 0 && Context.Request.HttpContext.Request.Method == "POST" ? "Player not found" : "")</span>
+        <span style="color:red">@(Model.Players.Count <= 0 && Context.Request.HttpContext.Request.Method == "POST" ? "Player with criteria not found" : "")</span>
     </div>
 </div>
 <!-- Server status -->
