--- a/OWolverine/Views/StellarView/SearchFormView.cshtml
+++ b/OWolverine/Views/StellarView/SearchFormView.cshtml
@@ -4,12 +4,12 @@
     <div class="col-md-12">
         <form asp-action="Search" class="form-inline" method="post">
             <div class="form-group">
-                <label asp-for="ServerId">伺服器：</label>
+                <label asp-for="ServerId">Server</label>
                 <select asp-for="ServerId" asp-items="@(new SelectList(Model.Servers, "Id", "Name"))" class="form-control"></select>
             </div>
             <div class="form-group">
-                <label asp-for="PlayerName">玩家名稱：</label>
-                <input type="text" asp-for="PlayerName" class="form-control" placeholder="" value="@Model.PlayerName" />
+                <label asp-for="PlayerName">Player Name</label>
+                <input asp-for="PlayerName" class="form-control" placeholder="" value="@Model.PlayerName" />
             </div>
             <button type="submit" class="btn btn-default" id="player-request">諮詢</button>
         </form>
