--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -9,11 +9,14 @@
     Html.RenderPartial("SearchFormView", Model.SearchViewModel);
 }
 <hr />
+@if (Model.IsSearch && Model.Players.Count <= 0)
+{
 <div class="row">
     <div class="col-xs-12">
-        <span style="color:red">@(Model.IsSearch && Model.Players.Count <= 0 ? "Player with criteria not found." : "")</span>
+        <span style="color:red">Player with criteria not found.</span>
     </div>
 </div>
+}
 
 <!-- Planet List -->
 @if (Model.Planets.Any())
@@ -73,7 +76,7 @@
                     <a data-toggle="collapse" href="#collapse-@player.Id">@player.Name @(player.Status == "" ? "" : "(Status: "+player.Status+")")</a>
                 </h4>
             </div>
-            <div id="collapse-@player.Id" class="panel-collapse @(Model.Players.Count <= 3 ? "" : "collapse")">
+            <div id="collapse-@player.Id" class="panel-collapse @(Model.Players.Count == 1 ? "" : "collapse")">
                 <div class="panel-body">
                     <table class="table">
                         <thead>
