--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -11,69 +11,71 @@
 <hr />
 @if (Model.IsSearch && Model.Players.Count <= 0)
 {
-<div class="row">
-    <div class="col-xs-12">
-        <span style="color:red">Player with criteria not found.</span>
+    <div class="row">
+        <div class="col-xs-12">
+            <span style="color:red">Player with criteria not found.</span>
+        </div>
     </div>
-</div>
 }
 
 <!-- Planet List -->
 @if (Model.Planets.Any())
 {
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Planets[0].Coord)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Planets[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Planets[0].Moon)
-            </th>
-            <th>
-                Player
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Players[0].Alliance)
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Planets)
-        {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Coord)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Moon.Name)
-            </td>
-            <td>
-                <a href="#player-@item.OwnerId">@Html.DisplayFor(modelItem => item.Owner.Name)</a>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Owner.Alliance.Tag) - @Html.DisplayFor(modelItem => item.Owner.Alliance.Name)
-            </td>
-        </tr>
-        }
-    </tbody>
-</table>
+    <h4>Results: @Model.Planets.Count</h4>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Planets[0].Coord)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Planets[0].Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Planets[0].Moon)
+                </th>
+                <th>
+                    Player
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Players[0].Alliance)
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Planets)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Coord)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Moon.Name)
+                    </td>
+                    <td>
+                        <a href="#player-@item.OwnerId">@Html.DisplayFor(modelItem => item.Owner.Name)</a>
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Owner.Alliance.Tag) - @Html.DisplayFor(modelItem => item.Owner.Alliance.Name)
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
 
 <!-- Player List -->
+<h4>Results: @Model.Players.Count</h4>
 @foreach (var player in Model.Players)
 {
     <div class="panel-group" id="player-@player.Id">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a data-toggle="collapse" href="#collapse-@player.Id">@player.Name @(player.Status == "" ? "" : "(Status: "+player.Status+")")</a>
+                    <a data-toggle="collapse" href="#collapse-@player.Id">@player.Name @(player.Status == "" ? "" : "(Status: " + player.Status + ")")</a>
                 </h4>
             </div>
             <div id="collapse-@player.Id" class="panel-collapse @(Model.Players.Count == 1 ? "" : "collapse")">
@@ -117,54 +119,55 @@
 }
 
 <!-- Server status -->
-@if(!Model.IsSearch){
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Servers[0].Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Servers[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Servers[0].Universe.Speed)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Servers[0].ActivePlayers) / @Html.DisplayNameFor(model => model.Servers[0].Universe.Players)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Servers[0].MapUpdateDay)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Servers[0].LastUpdate)
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Servers)
-        {
+@if (!Model.IsSearch)
+{
+    <table class="table">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Universe.Speed) / @Html.DisplayFor(modelItem => item.Universe.FleetSpeed)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ActivePlayers) / @Html.DisplayFor(modelItem => item.Universe.Players.Count)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MapUpdateDay)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastUpdate)
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Servers[0].Id)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Servers[0].Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Servers[0].Universe.Speed)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Servers[0].ActivePlayers) / @Html.DisplayNameFor(model => model.Servers[0].Universe.Players)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Servers[0].MapUpdateDay)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Servers[0].LastUpdate)
+                </th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Servers)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Universe.Speed) / @Html.DisplayFor(modelItem => item.Universe.FleetSpeed)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ActivePlayers) / @Html.DisplayFor(modelItem => item.Universe.Players.Count)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.MapUpdateDay)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastUpdate)
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
