add moon and planet detail

--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -137,6 +137,9 @@
                     @Html.DisplayNameFor(model => model.Servers[0].ActivePlayers) / @Html.DisplayNameFor(model => model.Servers[0].Universe.Players)
                 </th>
                 <th>
+                    @Html.DisplayNameFor(model => model.Servers[0].Moons) / @Html.DisplayNameFor(model => model.Servers[0].Universe.Planets)
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.Servers[0].MapUpdateDay)
                 </th>
                 <th>
@@ -147,26 +150,29 @@
         <tbody>
             @foreach (var item in Model.Servers)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Id)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Universe.Speed) / @Html.DisplayFor(modelItem => item.Universe.FleetSpeed)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ActivePlayers) / @Html.DisplayFor(modelItem => item.Universe.Players.Count)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.MapUpdateDay)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LastUpdate)
-                    </td>
-                </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Universe.Speed) / @Html.DisplayFor(modelItem => item.Universe.FleetSpeed)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ActivePlayers) / @Html.DisplayFor(modelItem => item.Universe.Players.Count)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Moons) / @Html.DisplayFor(modelItem => item.Universe.Planets.Count)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MapUpdateDay)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastUpdate)
+                </td>
+            </tr>
             }
         </tbody>
     </table>
