--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -68,54 +68,63 @@
 }
 
 <!-- Player List -->
-<h4>Results: @Model.Players.Count</h4>
-@foreach (var player in Model.Players)
+@if (Model.Players.Any())
 {
-    <div class="panel-group" id="player-@player.Id">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">
-                    <a data-toggle="collapse" href="#collapse-@player.Id">@player.Name @(player.Status == "" ? "" : "(Status: " + player.Status + ")")</a>
-                </h4>
-            </div>
-            <div id="collapse-@player.Id" class="panel-collapse @(Model.Players.Count == 1 ? "" : "collapse")">
-                <div class="panel-body">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => player.Planets[0].Name)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => player.Planets[0].Coord)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => player.Planets[0].Moon)
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var planet in player.Planets)
-                            {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => planet.Name)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => planet.Coord)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => planet.Moon.Name)
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
+    <h4>Results: @Model.Players.Count</h4>
+    @foreach (var player in Model.Players)
+    {
+        <div class="panel-group" id="player-@player.Id">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#collapse-@player.Id">
+                            @player.Name
+                            @player.StatusText
+                            | Score Total: @player.ScoreTotal <span style="color:@(player.ScoreTotalDiff > 0 ? "#00B300":"red")">(@(player.ScoreTotalDiff > 0?"+":"") @player.ScoreTotalDiff)</span>
+                            | Military:  @player.ScoreMilitary <span style="color:@(player.ScoreTotalDiff > 0 ? "#00B300":"red")">(@(player.ScoreMilitaryDiff > 0 ? "+" : "") @player.ScoreMilitaryDiff)</span>
+                            | Ships: @player.Ships
+                        </a>
+                    </h4>
                 </div>
-                <div class="panel-footer">@(player.Alliance == null ? "N/A" : @player.Alliance.Name + " - " + @player.Alliance.Tag)</div>
+                <div id="collapse-@player.Id" class="panel-collapse @(Model.Players.Count == 1 ? "" : "collapse")">
+                    <div class="panel-body">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        @Html.DisplayNameFor(model => player.Planets[0].Name)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => player.Planets[0].Coord)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => player.Planets[0].Moon)
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var planet in player.Planets)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => planet.Name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => planet.Coord)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => planet.Moon.Name)
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="panel-footer">@(player.Alliance == null ? "N/A" : @player.Alliance.Name + " - " + @player.Alliance.Tag)</div>
+                </div>
             </div>
         </div>
-    </div>
+    }
 }
 
 <!-- Server status -->
@@ -150,29 +159,29 @@
         <tbody>
             @foreach (var item in Model.Servers)
             {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Universe.Speed) / @Html.DisplayFor(modelItem => item.Universe.FleetSpeed)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ActivePlayers) / @Html.DisplayFor(modelItem => item.Universe.Players.Count)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Moons) / @Html.DisplayFor(modelItem => item.Universe.Planets.Count)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MapUpdateDay)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastUpdate)
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Universe.Speed) / @Html.DisplayFor(modelItem => item.Universe.FleetSpeed)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ActivePlayers) / @Html.DisplayFor(modelItem => item.Universe.Players.Count)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Moons) / @Html.DisplayFor(modelItem => item.Universe.Planets.Count)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.MapUpdateDay)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastUpdate)
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
