--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -80,9 +80,10 @@
                         <a data-toggle="collapse" href="#collapse-@player.Id">
                             @player.Name
                             @player.StatusText
-                            | Score Total: @player.ScoreTotal <span style="color:@(player.ScoreTotalDiff > 0 ? "#00B300":"red")">(@(player.ScoreTotalDiff > 0?"+":"") @player.ScoreTotalDiff)</span>
-                            | Military:  @player.ScoreMilitary <span style="color:@(player.ScoreTotalDiff > 0 ? "#00B300":"red")">(@(player.ScoreMilitaryDiff > 0 ? "+" : "") @player.ScoreMilitaryDiff)</span>
-                            | Ships: @player.Ships | Snapshot time: @(player.SnapshotDiff)
+                            | Score Total: @player.ScoreTotal <span style="color:@(player.ScoreTotalDiff > 0 ? "#00B300":"red")">(@(player.ScoreTotalDiff > 0?"+":"")@player.ScoreTotalDiff)</span>
+                            | Military:  @player.ScoreMilitary <span style="color:@(player.ScoreTotalDiff > 0 ? "#00B300":"red")">(@(player.ScoreMilitaryDiff > 0 ? "+" : "")@player.ScoreMilitaryDiff)</span>
+                            | Ships: @player.Ships 
+                            <span class="pull-right">Snapshot time: @(player.SnapshotDiff) | Last update: @(player.LastUpdate)</span>
                         </a>
                     </h4>
                 </div>
