fix display error for player count

--- a/OWolverine/Views/StellarView/Index.cshtml
+++ b/OWolverine/Views/StellarView/Index.cshtml
@@ -176,7 +176,7 @@
                     @Html.DisplayFor(modelItem => item.Speed) / @Html.DisplayFor(modelItem => item.FleetSpeed)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Statistic.PlayerCount) / @Html.DisplayFor(modelItem => item.Statistic.PlanetCount)
+                    @Html.DisplayFor(modelItem => item.Statistic.ActivePlayerCount) / @Html.DisplayFor(modelItem => item.Statistic.PlayerCount)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Statistic.MoonCount) / @Html.DisplayFor(modelItem => item.Statistic.PlanetCount)
